[gd_scene load_steps=4 format=3 uid="uid://dlvv84dw41106"]

[ext_resource type="Script" path="res://scenes/fly.gd" id="1_sgbb7"]
[ext_resource type="Texture2D" uid="uid://5v6lw7mfyaji" path="res://assets/art/fly.png" id="2_75jsl"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ff4nw"]
radius = 26.0

[node name="Fly" type="Node2D" groups=["Flies"]]
script = ExtResource("1_sgbb7")

[node name="Fly" type="Sprite2D" parent="."]
position = Vector2(-4.76837e-07, 1)
texture = ExtResource("2_75jsl")
hframes = 2

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_ff4nw")

[node name="WingBuzzTimer" type="Timer" parent="."]
one_shot = true

[connection signal="area_entered" from="Area2D" to="." method="_on_fly_entered"]
[connection signal="timeout" from="WingBuzzTimer" to="." method="buzz_wings"]
